test_suite5/ALAN/test_suite/alan-2022-examples/failing/006070_mutation.alan
source A3 begin leave 62859 = 5 false end
